--- a/.github/workflows/OpenWrt-CI.yml
+++ b/.github/workflows/OpenWrt-CI.yml
@@ -7,7 +7,7 @@
 # <https://github.com/KFERMercer/OpenWrt-CI>
 # <https://github.com/82kg/autoBuildOP>
 
-name: Openwrt-X86_64-2020-02-24 TEST
+name: Openwrt-X86_64-2020-02-24 TEST2
 
 on:
   push:
@@ -148,7 +148,7 @@ jobs:
           # EOF
 
           # 常用LuCI插件选择:
-          cat >> .config <<EOF  
+          cat >> .config <<EOF
           CONFIG_PACKAGE_luci-app-accesscontrol=n
           CONFIG_PACKAGE_luci-app-adbyby-plus=n           
           CONFIG_PACKAGE_luci-app-filetransfer=n
@@ -186,6 +186,8 @@ jobs:
           # Translations
           cat >> .config <<EOF
           CONFIG_PACKAGE_default-settings=n
+          CONFIG_PACKAGE_luci-i18n-base-en=y
+          CONFIG_PACKAGE_luci-i18n-base-zh-cn=n
           CONFIG_LUCI_LANG_en=y
           CONFIG_LUCI_LANG_zh-cn=n          
           EOF
