--- a/.github/workflows/OpenWrt-CI.yml
+++ b/.github/workflows/OpenWrt-CI.yml
@@ -7,7 +7,7 @@
 # <https://github.com/KFERMercer/OpenWrt-CI>
 # <https://github.com/82kg/autoBuildOP>
 
-name: Openwrt-X86_64-2020-02-25 
+name: Openwrt-X86_64-2020-02-25 Kernal 4.19.106 
 
 on:
   push:
@@ -184,9 +184,7 @@ jobs:
           EOF
           
           # Translations
-          cat >> .config <<EOF
-          CONFIG_PACKAGE_luci-i18n-base-en=y
-          CONFIG_LUCI_LANG_zh-cn=n          
+          cat >> .config <<EOF                  
           CONFIG_LUCI_LANG_en=y                    
           EOF
           
