--- a/.github/workflows/OpenWrt-CI.yml
+++ b/.github/workflows/OpenWrt-CI.yml
@@ -153,6 +153,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-adbyby-plus=n           
           CONFIG_PACKAGE_luci-app-filetransfer=n
           CONFIG_PACKAGE_luci-app-arpbind=n
+          CONFIG_PACKAGE_luci-app-airplay2=n
           CONFIG_PACKAGE_luci-app-ddns=n
           CONFIG_PACKAGE_luci-app-flowoffload=y        
           CONFIG_PACKAGE_luci-app-firewall=n          
