--- a/.github/workflows/OpenWrt-CI.yml
+++ b/.github/workflows/OpenWrt-CI.yml
@@ -7,7 +7,7 @@
 # <https://github.com/KFERMercer/OpenWrt-CI>
 # <https://github.com/82kg/autoBuildOP>
 
-name: Openwrt-X86_64-2020725
+name: Openwrt-X86_64-2020728
 
 on:
   push:
@@ -186,7 +186,8 @@ jobs:
           
           # Translations:
           cat >> .config <<EOF                  
-          CONFIG_LUCI_LANG_en=y                    
+          CONFIG_LUCI_LANG_en=y
+          CONFIG_LUCI_LANG_cn=n                  
           EOF
           
           # LuCI主题:
