--- a/.github/workflows/OpenWrt-CI.yml
+++ b/.github/workflows/OpenWrt-CI.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Clone source code
         env: 
           REPO_URL: https://github.com/coolsnowwolf/lede
-          REPO_BRANCH: main
+          REPO_BRANCH: master
         run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
       
       - name: add helloword
