--- a/.github/workflows/OpenWrt-CI.yml
+++ b/.github/workflows/OpenWrt-CI.yml
@@ -164,6 +164,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-sfe=y      
           CONFIG_PACKAGE_luci-app-firewall=n          
           CONFIG_PACKAGE_luci-app-qbittorrent=n
+          CONFIG_PACKAGE_luci-app-nft-qos=y
           CONFIG_PACKAGE_luci-app-nlbwmon=n          
           CONFIG_PACKAGE_luci-app-vsftpd=n
           CONFIG_PACKAGE_luci-app-ipsec-vpnd=n
