--- a/.github/workflows/OpenWrt-CI.yml
+++ b/.github/workflows/OpenWrt-CI.yml
@@ -240,8 +240,8 @@ jobs:
         run: |
           rm -rf ./artifact/
           mkdir -p ./artifact/
-          find ./bin/targets/ -name "*combined*img*" | xargs -i mv -f {} ./artifact/
-          find ./bin/targets/ -name "*combined*vmdk*" | xargs -i mv -f {} ./artifact/
+          find ./bin/targets/ -name "*combined.img*" | xargs -i mv -f {} ./artifact/
+          
       - name: Upload artifact
         uses: actions/upload-artifact@master
         with:
