--- a/.github/workflows/OpenWrt-CI.yml
+++ b/.github/workflows/OpenWrt-CI.yml
@@ -7,7 +7,7 @@
 # <https://github.com/KFERMercer/OpenWrt-CI>
 # <https://github.com/82kg/autoBuildOP>
 
-name: Openwrt-X86_64-2012016
+name: Openwrt-X86_64-2012017
 
 on:
   push:
@@ -193,7 +193,7 @@ jobs:
           
           # LuCI主题:
           # cat >> .config <<EOF
-          # CONFIG_PACKAGE_luci-theme-argon=n
+          CONFIG_PACKAGE_luci-theme-argon=n
           # CONFIG_PACKAGE_luci-theme-netgear=n
           # EOF
 
