--- a/.github/workflows/OpenWrt-CI.yml
+++ b/.github/workflows/OpenWrt-CI.yml
@@ -192,7 +192,7 @@ jobs:
           EOF
           
           # LuCI主题:
-          # cat >> .config <<EOF
+          cat >> .config <<EOF
           CONFIG_PACKAGE_luci-theme-argon=y
           # CONFIG_PACKAGE_luci-theme-netgear=n
           # EOF
