--- a/.github/workflows/OpenWrt-CI.yml
+++ b/.github/workflows/OpenWrt-CI.yml
@@ -7,7 +7,7 @@
 # <https://github.com/KFERMercer/OpenWrt-CI>
 # <https://github.com/82kg/autoBuildOP>
 
-name: Openwrt-X86_64-2103114
+name: Openwrt-X86_64-210320
 
 on:
   push:
@@ -153,7 +153,9 @@ jobs:
           # 常用LuCI插件选择:
           cat >> .config <<EOF
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y 
-          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust=y   
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Rust=y
+          CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=n
+          CONFIG_PACKAGE_luci-app-jd-dailybonus=y          
           CONFIG_PACKAGE_luci-app-accesscontrol=n          
           CONFIG_PACKAGE_luci-app-adbyby-plus=n
           CONFIG_PACKAGE_luci-app-amule=n           
