--- a/.github/workflows/OpenWrt-CI.yml
+++ b/.github/workflows/OpenWrt-CI.yml
@@ -125,10 +125,10 @@ jobs:
           EOF
 
           # IPv6支持:
-          # cat >> .config <<EOF
-          # CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-          # CONFIG_PACKAGE_ipv6helper=y
-          # EOF
+          cat >> .config <<EOF
+          CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+          CONFIG_PACKAGE_ipv6helper=y
+          EOF
 
           # 多文件系统支持:
           # cat >> .config <<EOF
@@ -211,7 +211,7 @@ jobs:
           CONFIG_PACKAGE_autosamba=n  
           CONFIG_PACKAGE_nano=y
           CONFIG_PACKAGE_ttyd=y
-          # CONFIG_PACKAGE_curl=y
+          CONFIG_PACKAGE_curl=y
           # CONFIG_PACKAGE_htop=y          
           # CONFIG_PACKAGE_screen=y
           # CONFIG_PACKAGE_tree=y
