--- a/.github/workflows/OpenWrt-Lean-helloworld.yml
+++ b/.github/workflows/OpenWrt-Lean-helloworld.yml
@@ -55,11 +55,11 @@ jobs:
       - name: Add helloword
         working-directory: ./openwrt
         run: |
-          echo "src-git helloworld https://github.com/fw876/helloworld" >> feeds.conf.default
-         # echo "src-git infinityfreedom https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom.git"  >> feeds.conf.default
-         # echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall.git;packages" >> feeds.conf.default
-         # echo "src-git passwall_luci https://github.com/xiaorouji/openwrt-passwall.git;luci" >> feeds.conf.default
-
+          echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall.git;packages" >> feeds.conf.default
+          echo "src-git passwall_luci https://github.com/xiaorouji/openwrt-passwall.git;luci" >> feeds.conf.default
+       # echo "src-git helloworld https://github.com/fw876/helloworld" >> feeds.conf.default
+       # echo "src-git infinityfreedom https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom.git"  >> feeds.conf.default
+ 
       - name: Update feeds
         working-directory: ./openwrt
         run: |
