--- a/.github/workflows/OpenWrt-Lean-ssrp+.yml
+++ b/.github/workflows/OpenWrt-Lean-ssrp+.yml
@@ -73,7 +73,7 @@ jobs:
           
       - name: Load custom configuration
         run: |
-          mv OpenWrt-Lean/.config_ssrp openwrt/.config
+          mv OpenWrt_Lean/.config_ssrp openwrt/.config
 
       - name: Make download
         working-directory: ./openwrt
