--- a/.github/workflows/OpenWrt-Lean-helloworld.yml
+++ b/.github/workflows/OpenWrt-Lean-helloworld.yml
@@ -7,7 +7,7 @@
 # <https://github.com/KFERMercer/OpenWrt-CI>
 # <https://github.com/82kg/autoBuildOP>
 
-name: OpenWrt-CI-x86
+name: OpenWrt-CI-lean-helloworld
 on:
   workflow_dispatch:
     inputs:
