--- a/.github/workflows/OpenWrt-Official-x86.yml
+++ b/.github/workflows/OpenWrt-Official-x86.yml
@@ -58,22 +58,24 @@ jobs:
         working-directory: ./openwrt
         run: |
           echo "src-git helloworld https://github.com/fw876/helloworld" >> feeds.conf.default
-        # echo "src-git infinityfreedom https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom.git"  >> feeds.conf.default
-        # echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall.git;packages" >> feeds.conf.default
-        # echo "src-git passwall_luci https://github.com/xiaorouji/openwrt-passwall.git;luci" >> feeds.conf.default
      
       - name: Update feeds and dependencies
         working-directory: ./openwrt
         run: |
-          ./scripts/feeds update -a
-          ./scripts/feeds install -a 
-          ./scripts/feeds update packages
           rm -rf feeds/packages/lang/golang
           svn co https://github.com/openwrt/packages/branches/openwrt-22.03/lang/golang feeds/packages/lang/golang          
           mkdir -p package/helloworld
           for i in "dns2socks" "microsocks" "ipt2socks" "pdnsd-alt" "redsocks2"; do \
           svn checkout "https://github.com/immortalwrt/packages/trunk/net/$i" "package/helloworld/$i"; \
           done
+          svn checkout https://github.com/coolsnowwolf/lede/trunk/tools/ucl tools/ucl
+          svn checkout https://github.com/coolsnowwolf/lede/trunk/tools/upx tools/upx
+          sed -i 'N;24a\tools-y += ucl upx' tools/Makefile
+          sed -i 'N;40a\$(curdir)/upx/compile := $(curdir)/ucl/compile' tools/Makefile
+          ./scripts/feeds update -a
+          ./scripts/feeds install -a 
+          ./scripts/feeds update packages
+          
       
       #- name: Set EN as default language
        # working-directory: ./openwrt
