--- a/.github/workflows/OpenWrt-clean.yml
+++ b/.github/workflows/OpenWrt-clean.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Clone source code
         env: 
           REPO_URL: https://github.com/openwrt/openwrt.git
-          REPO_BRANCH: openwrt-21.02
+          REPO_BRANCH: openwrt-23.05
         run: |
           git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
           git pull
@@ -68,12 +68,12 @@ jobs:
           ./scripts/feeds update -a
           ./scripts/feeds install -a 
           ./scripts/feeds update packages
-          rm -rf feeds/packages/lang/golang
-          svn co https://github.com/openwrt/packages/branches/openwrt-22.03/lang/golang feeds/packages/lang/golang          
-          mkdir -p package/helloworld
-          for i in "dns2socks" "microsocks" "ipt2socks" "pdnsd-alt" "redsocks2"; do \
-          svn checkout "https://github.com/immortalwrt/packages/trunk/net/$i" "package/helloworld/$i"; \
-          done
+        # rm -rf feeds/packages/lang/golang
+        # svn co https://github.com/openwrt/packages/branches/openwrt-22.03/lang/golang feeds/packages/lang/golang          
+        # mkdir -p package/helloworld
+        # for i in "dns2socks" "microsocks" "ipt2socks" "pdnsd-alt" "redsocks2"; do \
+        #  svn checkout "https://github.com/immortalwrt/packages/trunk/net/$i" "package/helloworld/$i"; \
+        #  done
           
       #- name: Set EN as default language
        # working-directory: ./openwrt
