--- a/.github/workflows/OpenWrt-clean.yml
+++ b/.github/workflows/OpenWrt-clean.yml
@@ -13,7 +13,7 @@ on:
     inputs:
       debug_enabled:
         type: boolean
-        description: 'Run the build with tmate debugging enabled (https://github.com/marketplace/actions/debugging-with-tmate)'
+        description: 'Run the build with tmate debugging enabled'
         required: false
         default: false
   #schedule:
