--- a/.github/workflows/OpenWrt-Official-arm32.yml
+++ b/.github/workflows/OpenWrt-Official-arm32.yml
@@ -11,10 +11,11 @@ name: OpenWrt-CI-arm32
 on:
   workflow_dispatch:
     inputs:
-      name:
-        description: 'Manual Trigger'
+      debug_enabled:
+        type: boolean
+        description: 'Run the build with tmate debugging enabled'
         required: false
-        default: 'Build'
+        default: false
   #schedule:
     #- cron: 0 23 * * *
     
@@ -83,7 +84,13 @@ jobs:
       - name: Load custom configuration
         run: |
           mv OpenWrt_Official/.config_arm32 openwrt/.config
+          cd ./openwrt
 
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
+        timeout-minutes: 5
+        
       - name: Make download
         working-directory: ./openwrt
         run: |
