--- a/.github/workflows/OpenWrt-Lean-ssrp+.yml
+++ b/.github/workflows/OpenWrt-Lean-ssrp+.yml
@@ -100,8 +100,10 @@ jobs:
           path: openwrt/artifact
           
       - name: Delete workflow runs
-        uses: GitRML/delete-workflow-runs@main
+        uses: Mattraks/delete-workflow-runs@v2
         with:
-          retain_days: 1
-          keep_minimum_runs: 5     
+          token: ${{ github.token }}
+          repository: ${{ github.repository }}
+          retain_days: 30
+          keep_minimum_runs: 5
  
