--- a/.github/workflows/OpenWrt-Official.yml
+++ b/.github/workflows/OpenWrt-Official.yml
@@ -52,8 +52,8 @@ jobs:
         working-directory: ./openwrt
         run: |
           echo "src-git helloworld https://github.com/fw876/helloworld" >> feeds.conf.default
-          echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall.git;packages" >> feeds.conf.default
-          echo "src-git passwall_luci https://github.com/xiaorouji/openwrt-passwall2.git;luci" >> feeds.conf.default
+          echo "src-git PWpackages https://github.com/xiaorouji/openwrt-passwall.git;packages" >> feeds.conf.default
+          echo "src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2.git" >> feeds.conf.default
         # echo "src-git infinityfreedom https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom.git"  >> feeds.conf.default
 
       - name: Update feeds and dependencies
