--- a/.github/workflows/OpenWrt-Official.yml
+++ b/.github/workflows/OpenWrt-Official.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Load custom configuration
         run: |
           mv OpenWrt_Official/.config openwrt/.config
-          sed -i 's/192.168.1.1/192.168.1.10/g' package/base-files/files/bin/config_generate      
+           
           
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
@@ -87,7 +87,7 @@ jobs:
           make download -j8
           find dl -size -1024c -exec ls -l {} \;
           find dl -size -1024c -exec rm -f {} \;
-
+        # sed -i 's/192.168.1.1/192.168.1.10/g' package/base-files/files/bin/config_generate   
         
       - name: Compile firmware
         working-directory: ./openwrt
