--- a/.github/workflows/OpenWrt-Official.yml
+++ b/.github/workflows/OpenWrt-Official.yml
@@ -51,9 +51,9 @@ jobs:
       - name: Add helloword
         working-directory: ./openwrt
         run: |
-          echo "src-git helloworld https://github.com/fw876/helloworld" >> feeds.conf.default
           echo "src-git passwall_packages https://github.com/xiaorouji/openwrt-passwall.git;main" >> feeds.conf.default
           echo "src-git passwall2 https://github.com/xiaorouji/openwrt-passwall2.git;main" >> feeds.conf.default     
+        # echo "src-git helloworld https://github.com/fw876/helloworld" >> feeds.conf.default
         # echo "src-git infinityfreedom https://github.com/xiaoqingfengATGH/luci-theme-infinityfreedom.git"  >> feeds.conf.default
 
       - name: Update feeds and dependencies
